--- a/pom.xml
+++ b/pom.xml
@@ -131,11 +131,13 @@
             <version>1.3.2</version>
         </dependency>
 
-        <!--<dependency>
+        <!-- https://mvnrepository.com/artifact/org.mybatis.generator/mybatis-generator-core -->
+        <dependency>
             <groupId>org.mybatis.generator</groupId>
-            <artifactId>mybatis-generator</artifactId>
+            <artifactId>mybatis-generator-core</artifactId>
             <version>1.3.7</version>
-        </dependency>-->
+        </dependency>
+
         <dependency>
             <groupId>org.mybatis.generator</groupId>
             <artifactId>mybatis-generator-maven-plugin</artifactId>
