增加用户注册服务通过dubbo暴露借口,用户注册消费者代码,调用dubbo服务

--- a/aiyou-web/src/main/webapp/WEB-INF/web.xml
+++ b/aiyou-web/src/main/webapp/WEB-INF/web.xml
@@ -35,7 +35,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>springmvc</servlet-name>
-    <url-pattern>*.action</url-pattern>
+    <url-pattern>/</url-pattern>
   </servlet-mapping>
 
   <!-- 地址为http://localhost:8080/  显示的默认网页-->
