--- a/aiyou-dao/pom.xml
+++ b/aiyou-dao/pom.xml
@@ -20,7 +20,7 @@
     </dependencies>
 
     <build>
-        <plugins>
+        <!--<plugins>
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
@@ -46,6 +46,6 @@
                     </dependency>
                 </dependencies>
             </plugin>
-        </plugins>
+        </plugins>-->
     </build>
 </project>
