--- a/aiyou-dao/pom.xml
+++ b/aiyou-dao/pom.xml
@@ -20,6 +20,7 @@
     </dependencies>
 
     <build>
+        <!--自动生成mybatis代码-->
         <!--<plugins>
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
@@ -47,5 +48,29 @@
                 </dependencies>
             </plugin>
         </plugins>-->
+
+        <!--mvn install时可以编译制定文件,当mybatis的mapper.xml不在resources目录下默认无法匹配,
+        用这种方式编译,可以将mapper.xml放到src/java/代码包下-->
+        <testSourceDirectory>src/test/java</testSourceDirectory>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+            <resource>
+                <directory>src/main/java</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+        </resources>
+        <outputDirectory>target/classes</outputDirectory>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
+        </testResources>
     </build>
 </project>
