--- a/aiyou-web/src/main/webapp/WEB-INF/web.xml
+++ b/aiyou-web/src/main/webapp/WEB-INF/web.xml
@@ -38,6 +38,17 @@
     <url-pattern>/</url-pattern>
   </servlet-mapping>
 
+  <!--log-->
+  <context-param>
+    <param-name>logbackConfigLocation</param-name>
+    <param-value>classpath:logback.xml</param-value>
+  </context-param>
+
+
+  <listener>
+    <listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
+  </listener>
+
   <!-- 地址为http://localhost:8080/  显示的默认网页-->
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
